# claude-code-statusline

./: CONTRIBUTING.md  LICENSE  README.md  build.sh  install.ps1  install.sh  pyproject.toml  statusline.py
docs/: index.html
src/claude_code_statusline/: config.py  configure.py  main.py  render.py  selector.py  themes.py  usage.py  widgets.py
