[project]
name = "claude-code-statusline"
version = "0.1.0"
description = "Beautiful, customizable statusline for Claude Code CLI. One command to install and configure."
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
keywords = ["claude", "claude-code", "statusline", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lucasgdev/claude-code-statusline"
Repository = "https://github.com/lucasgdev/claude-code-statusline"

[project.scripts]
claude-code-statusline = "claude_code_statusline.main:entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_statusline"]
